--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 anyhow = "1.0.70"
 log = "0.4.17"
 thiserror = "1.0.40"
-tokio = "1.27.0"
-tracing = "0.1.37"
+tokio = { version = "1.27.0", features = ["full"] }
 tracing-subscriber = "0.3.16"
+wgpu = "0.15.1"
 winit = "0.28.3"
