--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ nalgebra-glm = "0.18.0"
 rand = "0.8.5"
 thiserror = "1.0.40"
 tokio = { version = "1.27.0", features = ["full"] }
-tracing-subscriber = "0.3.16"
+tracing = "0.1.37"
+tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
 wgpu = "0.15.1"
 winit = "0.28.3"
